fix tweet message overflow

--- a/client/src/components/Tweet/Tweet.css
+++ b/client/src/components/Tweet/Tweet.css
@@ -1,3 +1,7 @@
 .rounded-circle {
   border-radius: 100%;
 }
+.tweet-message {
+  width: 100%;
+  white-space: break-spaces;
+}
